--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-html-parser": "^2.0.2",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
